--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 <body>
     <h1>JavaScript</h1>
     <h2>本期預測號碼==></h2>
-    <button>開獎!</button><br>
-    <div id="lottory"></div>
+    <div class="date">日期</div>
+
+    <button onclick="getLottery()">開獎!</button><br>
+    <div id="lottery">
+
+
+    </div>
 
 
     <!-- 引用外部script  head區或是body區引用皆可-->
